# PX4_advanced_control

./: .gitignore  KadhirNotes.md  README.md
controllers/: CMakeLists.txt  package.xml
controllers/launch/: cmd_line.launch  offboard.launch  offboard_depth_traj.launch  offboard_traj.launch  script_sitl.launch  sitl_gazebo.launch  sitl_gazebo_debug.launch  sitl_traj.launch
controllers/models/iris/: iris.sdf
controllers/plugins/: CMakeLists.txt
controllers/plugins/src/: CMakeLists.txt  target-plugin.cpp
controllers/scripts/: offboard_setup.sh  sim_env_setup.sh
controllers/setup/: ROS_Gazebo_PX4_setup.docx
controllers/src/: 1_to_2.csv  advanced_cmd_line.py  advanced_controller.py  base_cmd_line.py  base_controller.py  experiment.rviz  main_control.py  points.txt  script_control.py  trajectory_controller.py
controllers/src/target_pairs/: 1_to_2.csv  1_to_3.csv  1_to_4.csv  2_to_1.csv  2_to_3.csv  2_to_4.csv  3_to_1.csv  3_to_2.csv  3_to_4.csv  4_to_1.csv  4_to_2.csv  4_to_3.csv
controllers/worlds/: test.world
mavros_controllers_mods/mavros_controllers/geometric_controller/include/: geometric_controller.h
mavros_controllers_mods/mavros_controllers/geometric_controller/src/: geometric_controller.cpp
mavros_controllers_mods/mavros_controllers/trajectory_publisher/include/: trajectoryPublisher.h
mavros_controllers_mods/mavros_controllers/trajectory_publisher/src/: trajectoryPublisher.cpp
